--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/src/js/hamburger.js">
     <link rel="stylesheet" href="/src/css/footer-contact.css">
     <link rel="stylesheet" href="/components/header/header.css">
    <link rel="stylesheet" href="/src/css/contact.css">
