replaced the intruments home-page links to show it in the right place

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/src/css/styles.css">
     <link rel="stylesheet" href="/src/js/hamburger.js">
     <link rel="stylesheet" href="/src/css/footer-contact.css">
     <link rel="stylesheet" href="/components/header/header.css">
@@ -38,7 +39,7 @@
             <ul id="mobile-menu" class="hidden">
               <li><a href="../index.html">Inicio</a></li>
               <li><a href="./about-us.html">Nosotr@s</a></li>
-              <li><a href="./instrument.html">Instrumentos</a></li>
+              <li><a href="../index.html/#instruments">Instrumentos</a></li>
               <li><a href="./contact.html">Contacto</a></li>
             </ul>
           </menu>
@@ -55,7 +56,7 @@
           <menu>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./about-us.html">Nosotr@s</a></li>
-            <li><a href="./instrument.html">Instrumentos</a></li>
+            <li><a href="../index.html#instruments">Instrumentos</a></li>
             <li><a href="./contact.html">Contacto</a></li>
           </menu>
         </nav>
