Fix link hamburguer.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/css/styles.css" />
     <link rel="stylesheet" href="src/css/home-page.css" />
-    <link rel="stylesheet" href="/components/footer/footer-contact.css">
+    <link rel="stylesheet" href="components/footer/footer-contact.css">
   </head>
   <body>
     <header>
@@ -60,7 +60,6 @@
         </nav>
       </div>
     </header>
-    <script src="/components/header/headerHamburger.js"></script>
     <main>
       <section class="description">
         <div class="text-description">
@@ -201,7 +200,7 @@
       </div>
   </footer>
     <script src="/src/js/home-page.js"></script>
-    <script src="../../components/header/headerHamburger.js"></script>
+    <script src="/src/js/hamburger.js"></script>
     <script src="../src/js/main.js"></script>
   </body>
 </html>
