--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/src/css/footer-contact.css">
+    <link rel="stylesheet" href="/components/footer/footer-contact.css">
     <link rel="stylesheet" href="/components/header/header.css">
    <link rel="stylesheet" href="/src/css/contact.css">
    <link rel="stylesheet" href="/src/css/styles.css">
