--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,7 +83,7 @@
 
         <div class="contact-form"> <!-- Estos son los botones de Contacto -->
 
-            <form action="#" method="post">
+            <form id ="form" action="#" method="post">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
 
@@ -137,10 +137,10 @@
             </div>
         </div>
     </footer>
-    <script src="main-js"></script>
+    
     
 <!-- Emnlace al archivo de Javascript -->
-<script src="/src/js/main.js"></script>
+<script src="/src/js/contact.js"></script>
 <script src="/components/header/headerHamburger.js"></script>
 </body>
 
