--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,8 +83,6 @@
 
         <div class="contact-form"> <!-- Estos son los botones de Contacto -->
 
-            <h1>Contact</h1> <!-- Este es el título del formulario -->
-
             <form action="#" method="post">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
@@ -101,7 +99,7 @@
                 <button type="submit">Enviar</button>
             </form>
         </div>
-    </section> <!-- Fin de la section main -->
+    </section> <!-- Fin de la section botones de contacto -->
 
      <!-- Contenido de la pagina -->
 
